--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,57 @@
 .idea/
 
 # Python
-__pycache__
-venv
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.pyc
+*.pyo
+*.pyd
+*.env
+.env/
+venv/
+ENV/
+env/
+.venv/
+
+# pipenv
+Pipfile.lock
+
+# poetry
+poetry.lock
+
+# virtualenv
+*.egg-info/
+dist/
+build/
+
+# Jupyter Notebook
+.ipynb_checkpoints/
+
+# mypy
+.mypy_cache/
+
+# pytest
+.pytest_cache/
+
+# coverage
+htmlcov/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+
+# tox
+.tox/
+
+# Sphinx documentation
+docs/_build/
+
+# PyInstaller
+*.spec
+
+# Project output
+output/
