--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,79 @@
 absl-py==1.2.0
+astunparse==1.6.3
 attrs==22.1.0
+audioop-lts==0.2.2
+audioread==3.1.0
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+contourpy==1.3.3
 cycler==0.11.0
+decorator==5.2.1
+flatbuffers==25.9.23
 fonttools==4.34.4
-kiwisolver==1.4.4
-matplotlib==3.5.2
-mediapipe==0.8.9.1
-numpy==1.23.1
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.76.0
+h5py==3.15.1
+idna==3.11
+iniconfig==2.3.0
+joblib==1.5.2
+keras==3.12.0
+kiwisolver==1.4.9
+lazy_loader==0.4
+libclang==18.1.1
+librosa==0.11.0
+llvmlite==0.45.1
+Markdown==3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+mdurl==0.1.2
+ml_dtypes==0.5.4
+msgpack==1.1.2
+namex==0.1.0
+numba==0.62.1
+numpy==2.2.6
 opencv-contrib-python==4.6.0.66
 opencv-python==4.6.0.66
-packaging==21.3
-Pillow==9.2.0
-protobuf==3.19.1
+opt_einsum==3.4.0
+optree==0.18.0
+packaging==25.0
+pandas==2.3.3
+pillow==12.0.0
+platformdirs==4.5.0
+pluggy==1.6.0
+pooch==1.8.2
+protobuf==6.33.1
+pycparser==2.23
+Pygments==2.19.2
 pyparsing==3.0.9
+pytest==9.0.1
 python-dateutil==2.8.2
-RPi.GPIO==0.7.1
+pytz==2025.2
+RPi.GPIO==0.7.1; platform_machine == "armv7l" or platform_machine == "aarch64"
+requests==2.32.5
+rich==14.2.0
+scikit-learn==1.7.2
+scipy==1.16.3
+seaborn==0.13.2
+setuptools==80.9.0
 six==1.16.0
+sounddevice==0.5.3
+soundfile==0.13.1
+soxr==1.0.0
+standard-aifc==3.13.0
+standard-chunk==3.13.0
+standard-sunau==3.13.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.2.0
+threadpoolctl==3.6.0
+tqdm==4.67.1
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==2.0.1
